# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.662 2008-06-05 16:50:03 mh Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl-2.0.txt.
# --

2.3.0 beta3 (2008/06/??)
 - (2008/06/05) Fixed bug# 2960 - DBUpdate-to-2.3.pl script possibly fails.
 - (2008/06/05) Added enhancement bug# 2964 - Add hash sort to data dumper
    of Kernel::System::Main::Dump to get it better readable and comparable
    (also for diff's).
 - (2008/06/05) Improved Kernel::System::Cache::File, moved cache type files
    to sub directory of tmp/ to tmp/Cache/to have it clear where the cache
    files are.

2.3.0 beta2 (2008/06/02)
 - (2008/06/02) Moved to new link mechanism.
 - (2008/06/02) Fixed bug# 2902 - Salutation and Signature examples in the
    admin interface are same.
 - (2008/06/02) Fixed bug# 2940 - Error/typo in DBUpdate-to-2.3.*.sql,
    'escalation_start_time' instead of 'escalation_update_time' is used.
 - (2008/06/01) Fixed bug# 2956 - Not working ticket escalation by using SLAs.
 - (2008/06/01) Added sub sorting to Kernel::System::Ticket::TicketSearch()
    and improved unit test. Example:
    my @TicketIDs = $Self->{TicketObject}->TicketSearch(
        Result  => 'ARRAY',
        Title   => '%sort/order by test%',
        Queues  => ['Raw'],
        OrderBy => ['Down', 'Down'],
        SortBy  => ['Priority', 'Age'],
        UserID  => 1,
    );
 - (2008/05/28) Fixed bug# 2891 - Typo in Bounce Customer notification
    'informations'.
 - (2008/05/22) Upgraded Mail::Tools from version 2.02 to 2.03 from CPAN.

2.3.0 beta1 (2008/05/19)
 - (2008/05/16) Updated cpan module Text::CSV to the version 1.05.
 - (2008/05/15) Added ticket search close time support to agent ticket search
    and generic agent.